website update for DA 505 Fall 2019

--- a/da505.html
+++ b/da505.html
@@ -29,19 +29,19 @@
 
 <div class="tell">
 
-<p><strong>Fall 2018.</strong></p>
+<p><strong>Fall 2019.</strong></p>
 
 <p>In this course, we will cover fundamental aspects of data modeling, different methods for processing data, and perform lots of hands-on 
 activities to apply the course material into practice.</p>
 
-<p>Between Oct 6 and Nov 19, the class meets Saturdays at 9am&#8211;12pm, and Mondays at 7pm&#8211;10pm at Karakoy Minerva Palas. </p>
+<p>Between Sep 27 and Nov 16, the class meets Saturdays at 9am&#8211;12pm, and Mondays at 7pm&#8211;10pm at Karakoy Minerva Palas. </p>
 </div>
 <div class="myhr"></div>
 <div class="tell">
 
 <p><em>Course material</em>: There is no textbook for the course, and the students are only responsible for material covered in class. Slides will be posted here after each lecture.</p>
 
-<p><em>Lecture notes</em>: All lecture notes can be found in <a href="https://drive.google.com/drive/folders/1BFjVm9pjryBnWdZWRwq9FlAxPRH98K_W?usp=sharing">this Google Drive folder</a>.
+<p><em>Lecture notes</em>: All lecture notes can be found in <a href="https://drive.google.com/drive/folders/1i-t1ve0WvFFHoZm0dQ5AwfzUtVbkOrCx">this Google Drive folder</a>.
 
 <p>For students looking for reference material, the following books are suggested.</p>
 
