2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 happy new year! 2025 

--- a/index.html
+++ b/index.html
@@ -36,20 +36,14 @@ href="https://dspace.sunyconnect.suny.edu/bitstream/handle/1951/55647/Tekle_grad
 with Time and Space Complexity Guarantees</a>. A list of my academic publications can be found <a 
 href="http://www.informatik.uni-trier.de/~ley/pers/hd/t/Tekle:K=_Tuncay">here</a>.</p>
 
-<p>I am currently an independent <em>software consultant</em> since Jan 2014, and an <em>visiting assistant professor</em> at the <a 
+<p>I am currently a <em>software engineer</em> at Meta since Dec 2023, and an <em>visiting assistant professor</em> at the <a 
 href="http://sunysb.edu">State University of New York at Stony Brook</a> since Nov 2016.</p>
 
-<p>As a software consultant, I am currently working on software and data solutions for <a href="http://ascenaretail.com/">Ascena Retail 
-Group</a> and <a href="https://www.softsurroundings.com/">Soft 
-Surroundings</a>. I have completed various projects for <a href="http://ralphlauren.com">Ralph Lauren</a>, <a 
-href="http://www.gordmans.com/">Gordmans</a>, <a href="http://www.athome.com/">At Home Stores</a>, <a 
-href="https://www.softsurroundings.com/">Soft Surroundings</a>, and <a href="http://www.childrensplace.com/">The Children's Place</a>.</p>
+<p>I previously worked at Columbus Consulting (2013-2023) on software and data solutions for various 
+retailers (including Nike, PepsiCo, Ralph Lauren among others), and at LogicBlox (2010-2013) on cutting-edge declarative database 
+technologies for retailers (including Walgreens, Crate &amp; Barrel and Carhartt).</p>
 
-<p>Between 2010-13, I worked at <a href="http://www.logicblox.com/">LogicBlox</a> in bringing cutting-edge declarative database 
-technologies to large retailers, such as <a href="http://www.carhartt.com/">Carhartt</a>, <a href="https://www.walgreens.com/">Walgreens</a>, 
-<a href="https://www.crateandbarrel.com/">Crate &amp; Barrel</a>.
-
-<p>During the fall semesters since 2014, I teach <em>Introduction to Data Modeling and Processing</em> in the <a 
+<p>I taught (2014-2020) <em>Introduction to Data Modeling and Processing</em> in the <a 
 href="http://da.sabanciuniv.edu">Data Analytics</a> MS program at <a href="http://da.sabanciuniv.edu">Sabanci University</a>.</p> </div> <div 
 class="myhr"></div> <div class="tell">
 
@@ -58,12 +52,18 @@ class="myhr"></div> <div class="tell">
 <div class="myhr"></div>
 <div class="tell">
 
-<p>On a more personal note, I was born in Jan &#8217;85 in <a href="http://en.wikipedia.org/wiki/Antalya">the most beautiful city on earth</a>. I got my BSc in Computer Science with a minor in Mathematics at <a href="http://sabanciuniv.edu">Sabanci University</a>. I currently live in Europe, but can see Asia from my house (can you guess <a href="http://en.wikipedia.org/wiki/Istanbul">where I live</a>, Ms. Palin?).</p>
+<p>On a more personal note, I was born in Jan &#8217;85 in <a href="http://en.wikipedia.org/wiki/Antalya">the most beautiful city on earth</a>. I got my BSc in Computer Science with a minor in Mathematics at <a href="http://sabanciuniv.edu">Sabanci University</a>. I currently live in London but I am not part of a <a href="https://en.wikipedia.org/wiki/Primrose_Hill_set">set</a>.</p>
 
-<p>I like swimming, running, cycling, football, cooking, eating, classical music, modal jazz, 70s rock, nouvelle vague cinema, analytic philosophy, 20th century politics, linguistics, and learning in the most general sense. Currently learning to play the piano, and to speak German. I am native in Turkish, fluent in English, upper-intermediate in French. If you are a foreigner in Turkey and interested in learning Turkish, please send me an email.</p>
+<p>I like swimming, running, cycling, football, cooking, eating, classical music, modal jazz, 70s rock, nouvelle vague cinema, analytic philosophy, 20th century politics, linguistics, and learning in the most general sense. Currently learning to play the piano, and to speak German. I am native in Turkish, fluent in English, upper-intermediate in French.</p>
 </div>
 <div class="myhr"></div>
-<div class="smalltell"><p>Last updated 2018/04/18.</div>
+<div class="tell">
+  <p>I sometimes <a href="writings.html">write</a>.
+  </p>
+</div>
+<div class="myhr"></div>
+
+<div class="smalltell"><p>Last updated 2025/01/21.</div>
 
 <p></div></p>
 
